--- a/src/app/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/dashboard/pages/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <div fxFlex="30"></div>
 
   <div fxFlex="55">
-    <nb-list nbInfiniteList listenWindowScroll [threshold]="10" (bottomThreshold)="loadNext()">
+    <nb-list nbInfiniteList listenWindowScroll [threshold]="10" (bottomThreshold)="fetchNextSet()">
       <nb-list-item *ngFor="let influencer of influencers">
         <app-influencer [influencer]="influencer"></app-influencer>
       </nb-list-item>
