--- a/src/app/dashboard/components/filter/filter.component.scss
+++ b/src/app/dashboard/components/filter/filter.component.scss
@@ -5,3 +5,10 @@
     border-color: #4ca5ff;
     color: #0080ff;
 }
+
+.input {
+    border-width: 0 0 1px 0;
+    border-color: black;
+    border-style: solid;
+    padding: 0 0 10px 0;
+}
